--- a/Unconverted/marketPlace.html
+++ b/Unconverted/marketPlace.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" sizes="290x290" href="assets/img/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
     <link rel="icon" type="image/png" sizes="290x290" href="assets/img/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
     <link rel="icon" type="image/png" sizes="290x290" href="assets/img/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=ef23bcd607e6e03062da062a5d43ffd3">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=a1c2f7bd450bfa76c52d2701fef3b540">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css?h=1585abf9beaf49802b3a80bf813edceb">
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css?h=1585abf9beaf49802b3a80bf813edceb">
     <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css?h=1585abf9beaf49802b3a80bf813edceb">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css?h=1585abf9beaf49802b3a80bf813edceb">
-    <link rel="stylesheet" href="assets/css/Animated-Pretty-Product-List-v12.css?h=19a7b4a88baf7055952f177ac78ec3a2">
+    <link rel="stylesheet" href="assets/css/Animated-Pretty-Product-List-v12.css?h=14dbca83e0683199e8026666b7a23dcd">
     <link rel="stylesheet" href="assets/css/Article-List.css?h=cec575f25bba55cfaa10100750e76412">
     <link rel="stylesheet" href="assets/css/Data-Table.css?h=d41d8cd98f00b204e9800998ecf8427e">
     <link rel="stylesheet" href="assets/css/Footer-Dark.css?h=cabc25193678a4e8700df5b6f6e02b7c">
@@ -26,13 +26,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.0/assets/owl.carousel.css">
+    <link rel="stylesheet" href="assets/css/Login-Form-Clean.css?h=d41d8cd98f00b204e9800998ecf8427e">
     <link rel="stylesheet" href="assets/css/Navigation-Clean.css?h=2e3a583ccd2ca92dbc4beb31c46f517f">
     <link rel="stylesheet" href="assets/css/Parallax-Scroll-Effect.css?h=a65c0cd6fefe7dc2a87d573c021d4bf7">
     <link rel="stylesheet" href="assets/css/Projects-Horizontal.css?h=629d58fbf0c09cfce874a8418f8b228d">
     <link rel="stylesheet" href="assets/css/slider-hover.css?h=d41d8cd98f00b204e9800998ecf8427e">
-    <link rel="stylesheet" href="assets/css/Sprout-Creek-Shopping-Cart.css?h=dd432cc8b3535c7c4b0c78963384e526">
+    <link rel="stylesheet" href="assets/css/Sprout-Creek-Shopping-Cart.css?h=d8c1bf7685df752cae904642aa79a642">
     <link rel="stylesheet" href="assets/css/Team-Clean.css?h=62828445df8f4642f923094e00e047a0">
-    <link rel="stylesheet" href="assets/css/untitled.css?h=f6441da0d967d82071852bf314b3de49">
+    <link rel="stylesheet" href="assets/css/untitled.css?h=54370175c67337a2bf6f2d653fc54afd">
 </head>
 
 <body style="background-color: #fffaf2;">
@@ -101,10 +102,7 @@
                                             <div class="about">
                                                 <div class="rating" style="margin-top: 20px;">
                                                     <h3 class="text-left" style="font-size: 20px;color: rgb(98,100,112);"><strong>Description:</strong></h3>
-                                                    <p class="text-left" id="itemDescription" style="font-size: 18px;color: rgb(98,100,112);width: 450px;height: 106px;overflow-y: auto;">a good man&nbsp;a good man&nbsp;a good man&nbsp;a good man v v v v va good man&nbsp;a good man&nbsp;a good man&nbsp;a good man&nbsp;a good man&nbsp;a good man&nbsp;a good man&nbsp;a good man v v v v
-                                                        va good man&nbsp;a good man&nbsp;a good man&nbsp;a good man&nbsp;a good man&nbsp;a good man&nbsp;a good man&nbsp;a good man v v v v va good man&nbsp;a good man&nbsp;a good man&nbsp;a good mana good
-                                                        man&nbsp;a good man&nbsp;a good man&nbsp;a good man v v v v va good man&nbsp;a good man&nbsp;a good man&nbsp;a good mana good man&nbsp;a good man&nbsp;a good man&nbsp;a good man v v v v va good man&nbsp;a
-                                                        good man&nbsp;a good man&nbsp;a good man<br></p>
+                                                    <p class="text-break text-left" id="itemDescription" style="font-size: 18px;color: rgb(98,100,112);width: 452px;height: 106px;overflow-y: auto;">i h8 r<br></p>
                                                 </div>
                                             </div>
                                         </div><button class="btn btn-primary btn-block border rounded shadow" id="addToCart1" type="button" style="background-color: rgb(79,121,96);margin-bottom: 0px;height: 45px;font-size: 18px;"><i class="icon-basket"></i>&nbsp;Add To Cart</button></div>
@@ -278,18 +276,18 @@
     <script src="assets/js/jquery.min.js?h=83e266cb1712b47c265f77a8f9e18451"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js?h=63715b63ee49d5fe4844c2ecae071373"></script>
     <script src="assets/js/smart-forms.min.js?h=1585abf9beaf49802b3a80bf813edceb"></script>
-    <script src="assets/js/chart.min.js?h=1585abf9beaf49802b3a80bf813edceb"></script>
-    <script src="assets/js/bs-init.js?h=4b752cc845715166f92a803a043bee02"></script>
+    <script src="assets/js/bs-init.js?h=009e1093d04bef4d964ccf07197400d3"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
     <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
     <script src="assets/js/Sprout-Creek-Shopping-Cart-1.js?h=975b2635c9a06eae9f47d6cae8158a12"></script>
     <script src="assets/js/Sprout-Creek-Shopping-Cart.js?h=417b03f5f0a4f9f27f8c248f532eb5af"></script>
-    <script src="assets/js/cart.js?h=66e43e4e02fe90f22c60cb6f3009905b"></script>
+    <script src="assets/js/editAccount.js?h=25f18be7bb2151730c532f113b7d9208"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.0/owl.carousel.js"></script>
-    <script src="assets/js/paymentPage.js?h=3ac72a4cfafc60d5dfd974b0177cb960"></script>
+    <script src="assets/js/paymentPage.js?h=a0bb52ca0e8aabcf85162ee117b10f3b"></script>
     <script src="assets/js/slider-hover.js?h=c1e4ccc027c05db2a63a66297f1c4871"></script>
     <script src="assets/js/theme.js?h=6d33b44a6dcb451ae1ea7efc7b5c5e30"></script>
 </body>
