forgot password update

--- a/Unconverted/forgotPasswordEmail.html
+++ b/Unconverted/forgotPasswordEmail.html
@@ -204,7 +204,7 @@
         </td>
     </tr>
     <tr>
-        <td style="padding:0 0 25px 25px;" align="center" class="padding">
+        <td style="padding:0 0 25px 25px;" align="center" class="padding" bgcolor="#fffdfa">
             <table border="0" cellspacing="0" cellpadding="0" class="mobile-button-container">
                 <tr>
                     <td align="center">
